# choir

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2020-12-24-112601_create_users/: down.sql  up.sql
migrations/2021-01-16-092212_create_appointments/: down.sql  up.sql
migrations/2021-01-22-170818_create_participates/: down.sql  up.sql
src/: application.rs  auth.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs
static/css/: dashboard.css
static/js/: ajax.js
templates/: appointment.html.tera  appointments.html.tera  base.html.tera  dashboard.html.tera  groups.html.tera  layout.html.tera  login.html.tera  member.html.tera  members.html.tera
