[package]
name = "choir"
version = "0.1.0"
authors = ["David Sugar <foobarc11@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6" # Web framework
diesel = { version = "1.4.5", features = ["postgres"] } # Database
dotenv = "0.15" # Environment variables via '.env' file
diesel_migrations = "1.4.0" # Migration support in software
rust-argon2 = "0.8.3" # Password hashing
rand = "0.8.0" # Rng's
serde = { version = "1.0", features = ["derive"] } # Serialization

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "serve", "diesel_postgres_pool"]
